--- a/site/layouts/partials/swap-text-form.html
+++ b/site/layouts/partials/swap-text-form.html
@@ -1,23 +1,48 @@
-<section class="swap-text-container" id="wlf-form2">
-<div class="swap-text">
-  <div class="container">
+<section class="supporttext" id="wlf-form2">
+    <div class="mobile-column-wrap">
+        <div class="container">
+            <div class="row">
+                <div class="col-8">
+                    <h2 class="text-uppercase">
+                        Speak To The Best Personal Injury Lawyers in California
+                    </h2>
+                </div>
+                <div class="col">
+                    <picture>
+                        <source data-srcset="{{ .Site.BaseURL }}img/MVTLA-president.webp" type="image/webp"
+                                class="img-fluid lazyload">
+                        <source data-srcset="{{ .Site.BaseURL }}img/MVTLA-president.png" type="image/png"
+                                class="img-fluid lazyload">
+                        <img data-srcset="{{ .Site.BaseURL }}img/MVTLA-president.png"
+                             src="{{ .Site.BaseURL }}img/MVTLA-president.png" class="img-fluid lazyload float-right"
+                             alt="Top 100 National Trial Lawyers Badge">
+                    </picture>
+                </div>
+            </div>
+          <div class="row">
+            <div class="col-lg-7">
 
-    <h2 class="text-center text-capitalize">
-      Speak To The Best  <span class="insertKW">Personal Injury Lawyers</span> in California Immediately For Maximum Compensation
-    </h2>
+              <p class="swaptextp" id="paraSwap">
+                In order to get the compensation that you deserve, you must work with the best car accident law
+                firm in your area. Our dedicated team of car accident lawyers will fight for you against the
+                insurance company’s attempts to weaken your claim. Because of this, Wilshire Law Firm has
+                familiarized itself with how insurance companies work and we know how to counteract their
+                delay-and-deny tactics. It is common for us to double, triple, or even quadruple an insurance
+                company’s initial settlement offer. We have won more than <strong>$400 million</strong> for our
+                clients. If you want to get maximum compensation for your damages, injuries and losses, call
+                Wilshire Law Firm today. With our team of expert car accident attorneys, you will never have to
+                settle for less than you deserve. Call now or tap the button below for a free consultation!
+              </p>
+              <p class="swaptextp paragraph">
+                <br/>
+                Wilshire Law Firm's award-winning <span class="insertKW"></span> have a history of winning our
+                client’s cases. Our <span class="insertKW"></span> are committed to protecting your rights and
+                ensuring that you are paid generously for your rights being violated.
+              </p>
+            </div>
+          </div>
+        </div>
 
-    <div class="row">
-      <div class="col-lg-7">
-        <img id="pa_badge" data-src="{{ .Site.BaseURL }}img/MVTLA-president.png" class="img-fluid logo lazyload" alt="Top 100 National Trial Lawyers Badge" />
-        <p class="swaptextp" id="paraSwap">
-          In order to get the compensation that you deserve, you must work with the best car accident law firm in your area. Our dedicated team of car accident lawyers will fight for you against the insurance company’s attempts to weaken your claim. Because of this, Wilshire Law Firm has familiarized itself with how insurance companies work and we know how to counteract their delay-and-deny tactics. It is common for us to double, triple, or even quadruple an insurance company’s initial settlement offer. We have won more than <strong>$400 million</strong> for our clients. If you want to get maximum compensation for your damages, injuries and losses, call Wilshire Law Firm today. With our team of expert car accident attorneys, you will never have to settle for less than you deserve. Call now or tap the button below for a free consultation!
-        </p>
-        <p class="swaptextp paragraph">
-          <br />
-          Wilshire Law Firm's award-winning <span class="insertKW"></span> have a history of winning our client’s cases. Our <span class="insertKW"></span> are committed to protecting your rights and ensuring that you are paid generously for your rights being violated.
-        </p>
-      </div>
+
     </div>
-  </div>
-</div>
 </section>
