--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -28,7 +28,7 @@
 
 {{ partial "form.html" . }}
 
-{{ partial "swap-text-form.html" . }}
+{{ partial "support-text.html" . }}
 
 {{ partial "footer.html" . }}
 
