--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,27 +1,28 @@
 <!-- footer Start -->
 <div class="section-wrap footer text-center">
-  <section class="section-header-logo">
     <picture>
-      <source data-srcset="{{ .Site.BaseURL }}img/wlf-logo.webp" type="image/webp" class="img-fluid">
-      <source data-srcset="{{ .Site.BaseURL }}img/wlf-logo.png" type="image/png" class="img-fluid">
-      <img data-srcset="{{ .Site.BaseURL }}img/wlf-logo.png" src="{{ .Site.BaseURL }}img/wlf-logo.png" class="img-fluid" alt="Wilshire Law Firm logo">
+        <source data-srcset="{{ .Site.BaseURL }}img/wlf-full-logo.webp" type="image/webp" class="img-fluid">
+        <source data-srcset="{{ .Site.BaseURL }}img/wlf-full-logo.jpg" type="image/jpg" class="img-fluid">
+        <img data-srcset="{{ .Site.BaseURL }}img/wlf-full-logo.jpg" src="{{ .Site.BaseURL }}img/wlf-full-logo.jpg"
+             class="img-fluid" alt="Wilshire Law Firm logo">
     </picture>
-  </section>
-
-  <p>&copy; 2020 Wilshire Law Firm | <a href="https://www.wilshirelawfirm.com/privacy/" target="_blank" title="Wilshire Law Firm Privacy Policy" rel="noreferrer">Privacy Policy</a></p>
-  <p>3055 Wilshire Blvd., 12th Floor<br> Los Angeles, CA 90010</p>
+    <div class="footer__address">3055 Wilshire Blvd., 12th Floor<br> Los Angeles, CA 90010</div>
+    <div>&copy; 2020 Wilshire Law Firm | <a href="https://www.wilshirelawfirm.com/privacy/" target="_blank"
+                                            title="Wilshire Law Firm Privacy Policy" rel="noreferrer">Privacy Policy</a>
+    </div>
 </div>
 
 <!-- START MOBILE CALL POPUP -->
 <div id="mobile-pop-container">
-  <div class="visible-xs visible-sm">
-    <div class="mobile-call-pop text-center">
-      <a class="mobile-call-btn capPhone" href="tel:8553350244" onclick="dataLayer.push({'event':'Contact', 'eventAction':'Call', 'eventNumber': 'Mobile Footer - 8553350244'});">
-        <i class="icon-tap2call"></i> <span class="tap-to-call-text">TAP TO CALL NOW</span>
-      </a>
-      <!--<span class="available white">AVAILABLE NOW</span>-->
+    <div class="visible-xs visible-sm">
+        <div class="mobile-call-pop text-center">
+            <a class="mobile-call-btn capPhone" href="tel:8553350244"
+               onclick="dataLayer.push({'event':'Contact', 'eventAction':'Call', 'eventNumber': 'Mobile Footer - 8553350244'});">
+                <i class="icon-tap2call"></i> <span class="tap-to-call-text">TAP TO CALL NOW</span>
+            </a>
+            <!--<span class="available white">AVAILABLE NOW</span>-->
+        </div>
     </div>
-  </div>
 </div>
 <!-- END MOBILE CALL POPUP -->
 <script src="{{ .Site.BaseURL }}js/jquery-3.4.1.slim.min.js"></script>
@@ -46,78 +47,90 @@
 
 <script src="{{ .Site.BaseURL }}js/querystrings.min.js"></script>
 <script src="{{ .Site.BaseURL }}js/bootstrap-formhelpers.min.js"></script>
-<script src="{{ .Site.BaseURL }}js/validate.min.js" ></script>
+<script src="{{ .Site.BaseURL }}js/validate.min.js"></script>
 <script src="{{ .Site.BaseURL }}js/underscore-min.js"></script>
 <script src="{{ .Site.BaseURL }}js/modernizr-custom.js"></script>
 <script>
-  (function(i,n,v,o,c,a) { i.InvocaTagId = o; var s = n.createElement('script'); s.type = 'text/javascript';
-    s.async = true; s.src = ('https:' === n.location.protocol ? 'https://' : 'http://' ) + v;
-    var fs = n.getElementsByTagName('script')[0]; fs.parentNode.insertBefore(s, fs);
-  })(window, document, 'solutions.invocacdn.com/js/invoca-latest.min.js', '1695/0270988258');
+    (function (i, n, v, o, c, a) {
+        i.InvocaTagId = o;
+        var s = n.createElement('script');
+        s.type = 'text/javascript';
+        s.async = true;
+        s.src = ('https:' === n.location.protocol ? 'https://' : 'http://') + v;
+        var fs = n.getElementsByTagName('script')[0];
+        fs.parentNode.insertBefore(s, fs);
+    })(window, document, 'solutions.invocacdn.com/js/invoca-latest.min.js', '1695/0270988258');
 </script>
 
 <script>
-  $(window).on('load', function() {
-    $(".big_text1").bigtext();
-    $(".big_text2").bigtext();
-    $(".big_text3").bigtext();
-    $(".big_text4").bigtext();
-    $(".subhero__recovered-text1").bigtext();
-    $(".headline__big-text").css('opacity', '1');
-    $(".headline__big-text2").css('opacity', '1');
+    $(window).on('load', function () {
+        $(".big_text1").bigtext();
+        $(".big_text2").bigtext();
+        $(".big_text3").bigtext();
+        $(".big_text4").bigtext();
+        $(".subhero__recovered-text1").bigtext();
+        $(".headline__big-text").css('opacity', '1');
+        $(".headline__big-text2").css('opacity', '1');
 
-    $(".hablamos24__wrap").bigtext();
+        $(".hablamos24__wrap").bigtext();
 
-    $(".herolower__text").bigtext();
-    $(".header__wrap .subhero__phone-num").bigtext();
-    $(".section-header-right").css('visibility', 'visible');
+        $(".herolower__text").bigtext();
+        $(".header__wrap .subhero__phone-num").bigtext();
+        $(".section-header-right").css('visibility', 'visible');
 
 
-    document.getElementById('pageurl').value = window.location.href;
-    document.getElementById('pageurl-bottom').value = window.location.href;
+        document.getElementById('pageurl').value = window.location.href;
+        document.getElementById('pageurl-bottom').value = window.location.href;
 
-    $("form").removeClass("d-none");
+        $("form").removeClass("d-none");
 
-    var video_wrapper = $('.youtube-video-place');
+        var video_wrapper = $('.youtube-video-place');
 //  Check to see if youtube wrapper exists
-    if(video_wrapper.length){
-      console.log("exists!");
+        if (video_wrapper.length) {
+            console.log("exists!");
 // If user clicks on the video wrapper load the video.
-      $('.placeholder-youtube-video').on('click', function(ev){
-        console.log("clicked!");
-        /* Dynamically inject the iframe on demand of the user.
-         Pull the youtube url from the data attribute on the wrapper element. */
-        $(".play-youtube-video-wrapper").css("display", "block");
-        $(".placeholder-youtube-video").css("display", "none");
-        video_wrapper.html('<iframe id="video" allowfullscreen frameborder="0" class="embed-responsive-item" src="' + video_wrapper.data('yt-url') + '"></iframe>');
-      });
-    }
+            $('.placeholder-youtube-video').on('click', function (ev) {
+                console.log("clicked!");
+                /* Dynamically inject the iframe on demand of the user.
+                 Pull the youtube url from the data attribute on the wrapper element. */
+                $(".play-youtube-video-wrapper").css("display", "block");
+                $(".placeholder-youtube-video").css("display", "none");
+                video_wrapper.html('<iframe id="video" allowfullscreen frameborder="0" class="embed-responsive-item" src="' + video_wrapper.data('yt-url') + '"></iframe>');
+            });
+        }
 
-/*
+        /*
 
-    $(".form-control").on("input", function() {
-      $(this).removeClass("wlf-form--empty");
+            $(".form-control").on("input", function() {
+              $(this).removeClass("wlf-form--empty");
+            });
+            $(".form-control").on("blur", function() {
+              if (this.value == "") $(this).addClass("wlf-form--empty");
+            });
+            $(".form-control").on("focus", function() {
+              $(this).removeClass("wlf-form--empty");
+            })
+        */
+
+
     });
-    $(".form-control").on("blur", function() {
-      if (this.value == "") $(this).addClass("wlf-form--empty");
-    });
-    $(".form-control").on("focus", function() {
-      $(this).removeClass("wlf-form--empty");
-    })
-*/
-
-
-  });
 </script>
 <script src="{{ .Site.BaseURL }}js/validatorCallOut.js"></script>
 <!-- begin ClickGUARD Tracking Code -->
 <script type="application/javascript">
-  (function(){
-    window.cg_convert = function (x, y) { if (window._cg_convert) window._cg_convert(x || null, y || null); else setTimeout(function(){ cg_convert(x || null, y || null) },500); };
-    var script = document.createElement("script"); script.async = true; script.defer = true; script.type = "application/javascript";
-    script.src = 'https://io.clickguard.com/s/cHJvdGVjdG9y/je8TmfGv';
-    document.body.appendChild(script);
-  })();
+    (function () {
+        window.cg_convert = function (x, y) {
+            if (window._cg_convert) window._cg_convert(x || null, y || null); else setTimeout(function () {
+                cg_convert(x || null, y || null)
+            }, 500);
+        };
+        var script = document.createElement("script");
+        script.async = true;
+        script.defer = true;
+        script.type = "application/javascript";
+        script.src = 'https://io.clickguard.com/s/cHJvdGVjdG9y/je8TmfGv';
+        document.body.appendChild(script);
+    })();
 </script>
 <noscript><img src="https://io.clickguard.com/n/cHJvdGVjdG9y/je8TmfGv(43 B)
 https://io.clickguard.com/n/cHJvdGVjdG9y/je8TmfGv
@@ -126,12 +139,32 @@ https://io.clickguard.com/n/cHJvdGVjdG9y/je8TmfGv
 
 <!-- begin ClickGUARD Conversion Code -->
 <script type="text/javascript">
-  jQuery(document).ready(function($){
-    $(function(){ $('.subhero__phone-num').on('click',function(){ cg_convert('Header phone number'); }); });
-    $(function(){ $('.hero .gform_button').on('click',function(){ cg_convert('Hero Form'); }); });
-    $(function(){ $('.gform_footer .gform_button').on('click',function(){ cg_convert('Footer Form'); }); });
-    $(function(){ $('.ccl-slider-bubble').on('click',function(){ cg_convert('Client chat live'); }); });
-    $(function(){ $('.mobile-call-btn').on('click',function(){ cg_convert('Tap to call'); }); });
-  });
+    jQuery(document).ready(function ($) {
+        $(function () {
+            $('.subhero__phone-num').on('click', function () {
+                cg_convert('Header phone number');
+            });
+        });
+        $(function () {
+            $('.hero .gform_button').on('click', function () {
+                cg_convert('Hero Form');
+            });
+        });
+        $(function () {
+            $('.gform_footer .gform_button').on('click', function () {
+                cg_convert('Footer Form');
+            });
+        });
+        $(function () {
+            $('.ccl-slider-bubble').on('click', function () {
+                cg_convert('Client chat live');
+            });
+        });
+        $(function () {
+            $('.mobile-call-btn').on('click', function () {
+                cg_convert('Tap to call');
+            });
+        });
+    });
 </script>
 <!-- end ClickGUARD Conversion Code -->
