--- a/site/layouts/partials/head_custom.html
+++ b/site/layouts/partials/head_custom.html
@@ -63,7 +63,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
 
     }
 
-    .section-header-logo, .section-footer-logo {
+    .section-header-logo {
         justify-content: left;
         width: 25%;
     }
