--- a/site/themes/airspace-hugo/static/css/landing-page-2019.css
+++ b/site/themes/airspace-hugo/static/css/landing-page-2019.css
@@ -88,6 +88,8 @@
 }
 .icon-wlf-long-black:before {
     content: "\6c";
+    line-height: initial;
+    color: #fff;
 }
 .icon-wlf-shield-black:before {
     color: #fff;
@@ -625,7 +627,7 @@ p.subhero__no-win-desktop-no-win-text {
 }
 
 .footer {
-    background: #0c1c42;
+    background: #3c4e66;
     color: #fff;
     font-weight: 100;
     padding: 20px 0
@@ -706,7 +708,9 @@ p.subhero__no-win-desktop-no-win-text {
         padding-bottom: 25vw
     }
 }
-
+.footer__address{
+    margin:20px auto 40px auto;
+}
 button {
     height: 5vw;
     max-height: 60px;
