--- a/site/themes/airspace-hugo/static/css/landing-page-2019.css
+++ b/site/themes/airspace-hugo/static/css/landing-page-2019.css
@@ -705,7 +705,7 @@ p.subhero__no-win-desktop-no-win-text {
 
 @media only screen and (max-width:767px) {
     .footer {
-        padding-bottom: 25vw
+        padding-bottom: 18vw;
     }
 }
 .footer__address{
