--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -112,14 +112,14 @@
             })
         */
 
-      var video_wrapper = $('.youtube-video-place');
+      var video_wrapper = $('.placeholder-youtube-video');
       var observer = new IntersectionObserver(function(entries) {
         // isIntersecting is true when element and viewport are overlapping
         // isIntersecting is false when element and viewport don't overlap
         if(entries[0].isIntersecting === true)
           console.log('Element has just become visible in screen');
-        $(".play-youtube-video-wrapper").css("display", "block");
-        $(".placeholder-youtube-video").css("display", "none");
+        // $(".play-youtube-video-wrapper").css("display", "block");
+        // $(".placeholder-youtube-video").css("display", "none");
         video_wrapper.html('<iframe id="video" allowfullscreen frameborder="0" class="embed-responsive-item" src="' + video_wrapper.data('yt-url') + '"></iframe>');
       }, { threshold: [0] });
 
