--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,10 +1,10 @@
 <!-- footer Start -->
 <div class="section-wrap footer text-center">
     <picture>
-        <source data-srcset="{{ .Site.BaseURL }}img/wlf-full-logo.webp" type="image/webp" class="img-fluid">
-        <source data-srcset="{{ .Site.BaseURL }}img/wlf-full-logo.jpg" type="image/jpg" class="img-fluid">
+        <source data-srcset="{{ .Site.BaseURL }}img/wlf-full-logo.webp" type="image/webp" class="img-fluid lazyload">
+        <source data-srcset="{{ .Site.BaseURL }}img/wlf-full-logo.jpg" type="image/jpg" class="img-fluid lazyload">
         <img data-srcset="{{ .Site.BaseURL }}img/wlf-full-logo.jpg" src="{{ .Site.BaseURL }}img/wlf-full-logo.jpg"
-             class="img-fluid" alt="Wilshire Law Firm logo">
+             class="img-fluid lazyload" alt="Wilshire Law Firm logo">
     </picture>
     <div class="footer__address">3055 Wilshire Blvd., 12th Floor<br> Los Angeles, CA 90010</div>
     <div>&copy; 2020 Wilshire Law Firm | <a href="https://www.wilshirelawfirm.com/privacy/" target="_blank"
