--- a/site/layouts/partials/video.html
+++ b/site/layouts/partials/video.html
@@ -1,4 +1,8 @@
-<div class="video mobile-column-wrap placeholder-youtube-video embed-responsive embed-responsive-16by9" data-yt-url="https://www.youtube.com/embed/-xOKnDfIacA?rel=0&showinfo=0&autoplay=1">
+<div id="flag">
+
+</div>
+
+<div style="display: none;" class="video mobile-column-wrap placeholder-youtube-video embed-responsive embed-responsive-16by9" data-yt-url="https://www.youtube.com/embed/-xOKnDfIacA?rel=0&showinfo=0&autoplay=1">
     <picture>
         <source data-srcset="{{ .Site.BaseURL }}img/nicole_yt_tn_mobile.webp" type="image/webp" class="img-fluid lazyload">
         <source data-srcset="{{ .Site.BaseURL }}img/nicole_yt_tn_mobile.jpg" type="image/jpg" class="img-fluid lazyload">
