--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -10,9 +10,9 @@
                 <div class="col">
                     <picture>
                         <source data-srcset="{{ .Site.BaseURL }}img/MVTLA-president.webp" type="image/webp"
-                                class="img-fluid lazyload">
+                                class="img-fluid">
                         <source data-srcset="{{ .Site.BaseURL }}img/MVTLA-president.png" type="image/png"
-                                class="img-fluid lazyload">
+                                class="img-fluid">
                         <img data-srcset="{{ .Site.BaseURL }}img/MVTLA-president.png"
                              src="{{ .Site.BaseURL }}img/MVTLA-president.png" class="img-fluid lazyload float-right"
                              alt="Top 100 National Trial Lawyers Badge">
