--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -13,7 +13,7 @@
 </div>
 
 <!-- START MOBILE CALL POPUP -->
-<div id="mobile-pop-container" class="d-none">
+<div id="mobile-pop-container">
     <div class="visible-xs visible-sm">
         <div class="mobile-call-pop text-center">
             <a class="mobile-call-btn capPhone" href="tel:8553350244"
