--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -27,3 +27,8 @@
 <!-- End Google Tag Manager -->
 
 {{- partial "head_custom.html" . }}
+
+<link rel="dns-prefetch" href="//www.youtube.com">
+<link rel="dns-prefetch" href="//www.google.com">
+<link rel="dns-prefetch" href="//www.google-analytics.com">
+<link rel="dns-prefetch" href="//stats.g.doubleclick.net">
