--- a/site/themes/airspace-hugo/static/css/landing-page-2019.css
+++ b/site/themes/airspace-hugo/static/css/landing-page-2019.css
@@ -4,7 +4,7 @@
     font-family: 'wlf';
     src: url('../fonts/wlf/wlf.eot');
     src: url('../fonts/wlf/wlf.eot?#iefix') format('embedded-opentype'),
-    /*url('../fonts/wlf/wlf.woff') format('woff'),*/
+    url('../fonts/wlf/wlf.woff') format('woff'),
     url('../fonts/wlf/wlf.ttf') format('truetype'),
     url('../fonts/wlf/wlf.svg#wlf') format('svg');
     font-weight: normal;
