--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -112,7 +112,7 @@
         */
 
 
-/*        var video_wrapper = $('.placeholder-youtube-video');
+        var video_wrapper = $('.placeholder-youtube-video');
         var observer = new IntersectionObserver(function (entries) {
             // isIntersecting is true when element and viewport are overlapping
             // isIntersecting is false when element and viewport don't overlap
@@ -122,7 +122,7 @@
             $(video_wrapper).css("display", "block");
             video_wrapper.html('<iframe id="video" allowfullscreen frameborder="0" class="embed-responsive-item" src="' + video_wrapper.data('yt-url') + '"></iframe>');
         }, {threshold: [0]});
-        observer.observe(document.querySelector("#flag"));*/
+        observer.observe(document.querySelector("#flag"));
 
 
 
