--- a/site/layouts/partials/video.html
+++ b/site/layouts/partials/video.html
@@ -2,6 +2,6 @@
 
 </div>
 
-<div style="display: none;" class="video mobile-column-wrap placeholder-youtube-video embed-responsive embed-responsive-16by9" data-yt-url="https://www.youtube.com/embed/-xOKnDfIacA?rel=0&showinfo=0&autoplay=1">
+<div style="" class="video mobile-column-wrap placeholder-youtube-video embed-responsive embed-responsive-16by9" data-yt-url="https://www.youtube.com/embed/-xOKnDfIacA?rel=0&showinfo=0&autoplay=1">
 
 </div>
