--- a/site/layouts/partials/video.html
+++ b/site/layouts/partials/video.html
@@ -1,7 +1,2 @@
-<div id="flag">
-
-</div>
-
-<div style="" class="video mobile-column-wrap placeholder-youtube-video embed-responsive embed-responsive-16by9" data-yt-url="https://www.youtube.com/embed/-xOKnDfIacA?rel=0&showinfo=0&autoplay=1">
-
-</div>
+<div id="videoflag"></div>
+<div class="video mobile-column-wrap placeholder-youtube-video video-container21by12" data-yt-url="https://www.youtube.com/embed/-xOKnDfIacA?rel=0&showinfo=0&autoplay=1"></div>
