--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -128,11 +128,11 @@
 
         $(window).scroll(function(){
             if (sessionStorage.videoLoaded == "1") {
-                console.log("sessionStorage.videoLoaded=" + sessionStorage.videoLoaded);
+                // console.log("sessionStorage.videoLoaded=" + sessionStorage.videoLoaded);
             }else {
                 if ($("#videoflag").inView()) {
                     sessionStorage.videoLoaded = "1";
-                    console.log("in view");
+                    // console.log("in view");
                     var video_wrapper = $('.placeholder-youtube-video');
                     $(video_wrapper).addClass("placeholder-youtube-video--active");
                     video_wrapper.html('<iframe id="video" allowfullscreen frameborder="0" class="embed-responsive-item" src="' + video_wrapper.data('yt-url') + '"></iframe>');
