add padding to what we can do for you container

--- a/site/themes/airspace-hugo/static/css/lp19.css
+++ b/site/themes/airspace-hugo/static/css/lp19.css
@@ -554,6 +554,7 @@ section.capabilities h2 {
     flex-wrap: wrap;
     margin: 0 auto;
     justify-content: center;
+    padding: 0 10px;
 }
 
 .speciality .capability {
