--- a/site/layouts/partials/capabilities.html
+++ b/site/layouts/partials/capabilities.html
@@ -5,7 +5,7 @@
             <div class="specialty">
                 <div class="capability capability__max-compensation icon-max-compensation">
                 </div>
-                <span class="capability__message">Receive Maximum<br />Compensation</span>
+                <span class="capability__message">Receive Max<br />Compensation</span>
             </div>
             <div class="specialty">
                 <div class="capability capability__medical-paid icon-privacy">
