--- a/site/layouts/partials/form.html
+++ b/site/layouts/partials/form.html
@@ -1,6 +1,6 @@
 <div class="wlf-form text-center whywlf">
     <div class="wlf-form__container mobile-column-wrap">
-        <h3 class="text-left">FREE CONSULTATION 24/7</h3>
+        <h3 class="text-left font-weight-bold">FREE CONSULTATION 24/7</h3>
         <noscript>PLEASE ENABLE JAVASCRIPT IN YOUR BROWSER TO SEE THE FORM</noscript>
         <form name="LP19 Bottom Form" id="LP19_Bottom_Form" class="d-none" method="POST" data-netlify="true" action="/thank-you/" netlify-honeypot="honeypot-bot-field">
             <div class="form-group d-none">
