--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -27,3 +27,4 @@
 <!-- End Google Tag Manager -->
 
 {{- partial "head_custom.html" . }}
+<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&display=swap" rel="stylesheet">
