--- a/site/layouts/partials/capabilities.html
+++ b/site/layouts/partials/capabilities.html
@@ -26,7 +26,7 @@
             <div class="specialty">
                 <div class="capability capability__fix-car icon-justice">
                 </div>
-                <span class="capability__message">Justice</span>
+                <span class="capability__message">Justice<br />>For All</span>
             </div>
         </div>
     </div>
