--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -4,7 +4,7 @@
             <div class="hero__left">
                 <div class="hero__headline mobile-column-wrap">
                     <h1 class="d-sm-block d-md-none">
-                        <div class="headline__big-text font-weight-semi big_text1">
+                        <div class="headline__big-text font-weight-bold big_text1">
                             <span>YOU DON'T PAY</span>
                             <span>UNLESS YOU WIN</span>
                         </div>
@@ -13,7 +13,7 @@
                         <span>Award-Winning <span class="insertKW">Personal Injury Lawyers</span></span>
                     </h2>
                     <h1 class="d-none d-md-block">
-                        <div class="headline__big-text font-weight-semi big_text3">
+                        <div class="headline__big-text font-weight-bold big_text3">
                             <span>YOU DON'T PAY UNLESS YOU WIN</span>
                         </div>
                     </h1>
