--- a/site/themes/airspace-hugo/static/css/landing-page-2019.css
+++ b/site/themes/airspace-hugo/static/css/landing-page-2019.css
@@ -10,6 +10,28 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Open Sans';
+    src: url('../fonts/OpenSans-Regular.ttf');
+    url('../fonts/OpenSans-Regular.ttf') format('truetype'), font-weight: normal;
+    font-style: normal;
+    font-weight: 400;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url('../fonts/OpenSans-SemiBold.ttf');
+    url('../fonts/OpenSans-SemiBold.ttf') format('truetype'), font-weight: '600';
+    font-style: normal;
+    font-weight: 600;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: url('../fonts/OpenSans-SemiBold.ttf');
+    url('../fonts/OpenSans-Bold.ttf') format('truetype'), font-weight: '700';
+    font-style: normal;
+    font-weight: 700;
+}
+
 [data-icon]:before {
     font-family: "wlf" !important;
     content: attr(data-icon);
