--- a/site/layouts/partials/herolower.html
+++ b/site/layouts/partials/herolower.html
@@ -2,9 +2,9 @@
     <div class="herolower mobile-column-wrap">
         <div class="herolower__leftblock ">
             <picture>
-                <source data-srcset="{{ .Site.BaseURL }}img/super-lawyers.webp" type="image/webp" class="img-fluid lazyload">
-                <source data-srcset="{{ .Site.BaseURL }}img/super-lawyers.jpg" type="image/jpg" class="img-fluid lazyload">
-                <img data-srcset="{{ .Site.BaseURL }}img/super-lawyers.jpg" src="{{ .Site.BaseURL }}img/super-lawyers.jpg" class="img-fluid lazyload" alt="Super Lawyers">
+                <source data-srcset="{{ .Site.BaseURL }}img/super-lawyers.webp" type="image/webp" class="img-fluid">
+                <source data-srcset="{{ .Site.BaseURL }}img/super-lawyers.jpg" type="image/jpg" class="img-fluid">
+                <img data-src="{{ .Site.BaseURL }}img/super-lawyers.jpg" src="" class="img-fluid lazyload" alt="Super Lawyers">
             </picture>
             <div class="herolower__text font-weight-semi">
                 <span>NO LEGAL FEES</span><span>UNLESS YOU WIN</span>
@@ -12,9 +12,9 @@
         </div>
         <div class="herolower__rightblock">
             <picture>
-                <source data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.webp" type="image/webp" class="img-fluid lazyload">
-                <source data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" type="image/jpg" class="img-fluid lazyload">
-                <img data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" src="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" class="img-fluid lazyload" alt="Best Lawyers Best Law Firms U.S. News and World Report 2020">
+                <source data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.webp" type="image/webp" class="img-fluid">
+                <source data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" type="image/jpg" class="img-fluid">
+                <img data-src="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" src="" class="img-fluid lazyload" alt="Best Lawyers Best Law Firms U.S. News and World Report 2020">
             </picture>
         </div>
     </div>
