--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -13,8 +13,8 @@
                                 class="img-fluid">
                         <source data-srcset="{{ .Site.BaseURL }}img/MVTLA-president.png" type="image/png"
                                 class="img-fluid">
-                        <img data-srcset="{{ .Site.BaseURL }}img/MVTLA-president.png"
-                             src="{{ .Site.BaseURL }}img/MVTLA-president.png" class="img-fluid lazyload float-right"
+                        <img data-src="{{ .Site.BaseURL }}img/MVTLA-president.png"
+                             src="" class="img-fluid lazyload float-right"
                              alt="Top 100 National Trial Lawyers Badge">
                     </picture>
                 </div>
