--- a/site/layouts/partials/footer.html
+++ b/site/layouts/partials/footer.html
@@ -1,9 +1,9 @@
 <!-- footer Start -->
 <div class="section-wrap footer text-center">
     <picture>
-        <source data-srcset="{{ .Site.BaseURL }}img/wlf-full-logo.webp" type="image/webp" class="img-fluid lazyload">
-        <source data-srcset="{{ .Site.BaseURL }}img/wlf-full-logo.jpg" type="image/jpg" class="img-fluid lazyload">
-        <img data-srcset="{{ .Site.BaseURL }}img/wlf-full-logo.jpg" src="{{ .Site.BaseURL }}img/wlf-full-logo.jpg"
+        <source data-srcset="{{ .Site.BaseURL }}img/wlf-full-logo.webp" type="image/webp" class="img-fluid ">
+        <source data-srcset="{{ .Site.BaseURL }}img/wlf-full-logo.jpg" type="image/jpg" class="img-fluid ">
+        <img data-src="{{ .Site.BaseURL }}img/wlf-full-logo.jpg" src=""
              class="img-fluid lazyload" alt="Wilshire Law Firm logo">
     </picture>
     <div class="footer__address">3055 Wilshire Blvd., 12th Floor<br> Los Angeles, CA 90010</div>
