--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -10,7 +10,7 @@
                         </div>
                     </h1>
                     <h2 class="d-sm-block d-md-none headline__big-text big_text2 font-weight-regular">
-                        <span>Award-Winning <span class="insertKW">Personal Injury Lawyers</span></span>
+                        <span>Award-Winning Personal Injury Lawyers</span>
                     </h2>
                     <h1 class="d-none d-md-block">
                         <div class="headline__big-text font-weight-bold big_text3">
