--- a/site/themes/airspace-hugo/static/css/landing-page-2019.css
+++ b/site/themes/airspace-hugo/static/css/landing-page-2019.css
@@ -730,11 +730,14 @@ p.subhero__no-win-desktop-no-win-text {
 
 @media only screen and (max-width:767px) {
     .footer {
-        padding-bottom: 18vw;
+        padding:20px 20px 18vw 20px;
     }
 }
 .footer__address{
     margin:20px auto 40px auto;
+}
+.footer__copyright{
+    margin-bottom: 10px;
 }
 button {
     height: 5vw;
