--- a/site/layouts/partials/hero.html
+++ b/site/layouts/partials/hero.html
@@ -10,8 +10,11 @@
                         </div>
                     </h1>
                     <h2 class="d-sm-block d-md-none headline__big-text big_text2 font-weight-regular">
-                        <span>Award-Winning Personal Injury Lawyers</span>
+                        <span>Award-Winning Employment &</span>
                     </h2>
+                    <h2 class="d-sm-block d-md-none headline__big-text big_text2 font-weight-regular">
+                    <span>Class Action Lawyers</span>
+                </h2>
                     <h1 class="d-none d-md-block">
                         <div class="headline__big-text font-weight-bold big_text3">
                             <span>YOU DON'T PAY UNLESS YOU WIN</span>
