--- a/site/layouts/partials/herolower.html
+++ b/site/layouts/partials/herolower.html
@@ -6,7 +6,7 @@
                 <source data-srcset="{{ .Site.BaseURL }}img/super-lawyers.jpg" type="image/jpg" class="img-fluid">
                 <img data-src="{{ .Site.BaseURL }}img/super-lawyers.jpg" src="" class="img-fluid lazyload" alt="Super Lawyers">
             </picture>
-            <div class="herolower__text font-weight-semi">
+            <div class="herolower__text font-weight-bold">
                 <span>NO LEGAL FEES</span><span>UNLESS YOU WIN</span>
             </div>
         </div>
