--- a/site/layouts/partials/head.html
+++ b/site/layouts/partials/head.html
@@ -27,3 +27,5 @@
 <!-- End Google Tag Manager -->
 
 {{- partial "head_custom.html" . }}
+
+<link rel="preconnect" href="https://www.google-analytics.com">
