--- a/site/layouts/partials/herolower.html
+++ b/site/layouts/partials/herolower.html
@@ -14,7 +14,7 @@
             <picture>
                 <source data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.webp" type="image/webp" class="img-fluid">
                 <source data-srcset="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" type="image/jpg" class="img-fluid">
-                <img data-src="{{ .Site.BaseURL }}img/bestlawfirms-2020.jpg" src="" class="img-fluid lazyload" alt="Best Lawyers Best Law Firms U.S. News and World Report 2020">
+                <img data-src="{{ .Site.BaseURL }}img/bestlawfirms_2020.svg" src="" class="img-fluid lazyload" alt="Best Lawyers Best Law Firms U.S. News and World Report 2020">
             </picture>
         </div>
     </div>
