--- a/site/layouts/partials/head_custom.html
+++ b/site/layouts/partials/head_custom.html
@@ -244,13 +244,13 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
         filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ced7e0', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
     }
     .standard.hero__attorneys div{
-        height: 163px;
+        height: 173px;
     }
     .webp .standard.hero__attorneys div{
-        background: url(/img/hero-group-mobile.webp) no-repeat center;
+        background: url(/img/hero-group-mobile.webp) no-repeat center 100%;
     }
     .no-webp .standard.hero__attorneys div{
-        background: url(/img/hero-group-mobile.png) no-repeat center;
+        background: url(/img/hero-group-mobile.png) no-repeat center 100%;
     }
     .hero {
         display: -webkit-flex;
@@ -282,7 +282,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
     .hero__headline h2 {
         border: 0 solid #ccc;
         color: #3d4e68;
-        font-size: 1px;
+        font-size: 20px;
         width: 100%
     }
 
@@ -291,7 +291,7 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
     }
 
     .hero__headline h2 {
-        text-transform: capitalize
+        /*text-transform: capitalize*/
     }
 
     #wlf-form>div>div.hero__headline>h1.d-none.d-md-block {
@@ -383,9 +383,11 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
         content: "\f2a0"
     }
 
-    .headline__big-text,
-    .headline__big-text2 {
+    .headline__big-text{
         opacity: 0
+    }
+    h2.big_text2{
+        line-height: 1.2;
     }
 
 
