--- a/site/layouts/partials/head_custom.html
+++ b/site/layouts/partials/head_custom.html
@@ -252,7 +252,31 @@ Do not put anything in this file - it's only here so that hugo won't throw an er
     .no-webp .standard.hero__attorneys div{
         background: url(/img/hero-group-mobile.png) no-repeat center 100%;
     }
-    .hero {
+    @media only screen and (max-width:390px) {
+        .webp .standard.hero__attorneys div{
+            background: url(/img/hero-group-mobile.webp) no-repeat 80% 100%;
+        }
+        .no-webp .standard.hero__attorneys div{
+            background: url(/img/hero-group-mobile.png) no-repeat 80% 100%;
+        }
+    }
+    @media only screen and (max-width:360px) {
+        .webp .standard.hero__attorneys div{
+            background: url(/img/hero-group-mobile.webp) no-repeat 73% 100%;
+        }
+        .no-webp .standard.hero__attorneys div{
+            background: url(/img/hero-group-mobile.png) no-repeat 73% 100%;
+        }
+    }
+    @media only screen and (max-width:345px) {
+        .webp .standard.hero__attorneys div{
+            background: url(/img/hero-group-mobile.webp) no-repeat 61% 100%;
+        }
+        .no-webp .standard.hero__attorneys div{
+            background: url(/img/hero-group-mobile.png) no-repeat 61% 100%;
+        }
+    }
+        .hero {
         display: -webkit-flex;
         display: flex;
         -webkit-justify-content: center;
