--- a/site/layouts/partials/support-text.html
+++ b/site/layouts/partials/support-text.html
@@ -4,16 +4,16 @@
             <div class="row">
                 <div class="col-8">
                     <h2 class="text-uppercase">
-                        Speak To The Best Personal Injury Lawyers in California
+                        Speak To The Best Personal Injury Lawyers
                     </h2>
                 </div>
                 <div class="col">
                     <picture>
-                        <source data-srcset="{{ .Site.BaseURL }}img/MVTLA-president.webp" type="image/webp"
+                        <source data-srcset="{{ .Site.BaseURL }}img/award_top25.webp" type="image/webp"
                                 class="img-fluid">
-                        <source data-srcset="{{ .Site.BaseURL }}img/MVTLA-president.png" type="image/png"
+                        <source data-srcset="{{ .Site.BaseURL }}img/award_top25.jpg" type="image/jpg"
                                 class="img-fluid">
-                        <img data-src="{{ .Site.BaseURL }}img/MVTLA-president.png"
+                        <img data-src="{{ .Site.BaseURL }}img/award_top25.jpg"
                              src="" class="img-fluid lazyload float-right"
                              alt="Top 100 National Trial Lawyers Badge">
                     </picture>
