--- a/site/themes/airspace-hugo/static/css/landing-page-2019.css
+++ b/site/themes/airspace-hugo/static/css/landing-page-2019.css
@@ -560,7 +560,7 @@ p.subhero__no-win-desktop-no-win-text {
     width: 55%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
 }
 .herolower__text{
     line-height: 1;
